fix: wrap badges

--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,7 @@ a:visited {
     border-top: solid 1px #b3b3b3;
     justify-content: center;
     display: flex;
+    flex-wrap: wrap;
 }
 
 #badges a {
